src/test/deca/context/invalid/test_error_0.1-2.deca
// Description:
//    test affectation d'une variable non déclaré
//
// Resultats:
//    Erreur contextuelle  
//    Ligne 13 : Identificateur 'x' non déclaré (règle 0.1)
//
// Historique:
//    cree le 14/01/2022


{
	int x = x;
}
